--- a/src/css/main.css
+++ b/src/css/main.css
@@ -3,11 +3,7 @@
 
 @tailwind base;
 @tailwind components;
-@tailwind utilities;
-
-* {
-    background-color: #1c2830;
-    color: #f5f5f5 !important;
+@tailwind utilities;mportant;
 }
 
 @layer base {
