main.css: changed

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -5,7 +5,9 @@
 @tailwind components;
 @tailwind utilities;
 
-#featured-posts
+#featured-posts {
+    
+}
 
 #newsletter-cta {
     scroll-margin-top: 2ex;
