main.css: changed

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -5,8 +5,9 @@
 @tailwind components;
 @tailwind utilities;
 
-#featured-posts {
-    
+#featured-posts h2,
+#featured-posts p {
+
 }
 
 #newsletter-cta {
