--- a/src/css/main.css
+++ b/src/css/main.css
@@ -11,9 +11,8 @@ img {
   filter: brightness(.8) saturate(1.25);
 }
 
-.sb-component-button-primary:hover,
-.sb-component-button-secondary:hover {
-
+.sb-component-button-primary:hover {
+    background-color: #f9dd9f;
 }
 
 body {
