--- a/src/css/main.css
+++ b/src/css/main.css
@@ -15,6 +15,12 @@ img {
     background-color: #f9dd9f;
 }
 
+
+
+.sb-component-button-secondary:hover {
+    background-color: #f9dd9f;
+}
+
 .sb-component-button-secondary:hover {
     background-color: #f9dd9f;
 }
