main.css: changed

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -18,7 +18,7 @@ img {
 
 
 .sb-component-button-secondary {
-    border-color: #f9dd9f;
+    border-color: #e6ebef;
 }
 
 .sb-component-button-secondary:hover {
