--- a/src/css/main.css
+++ b/src/css/main.css
@@ -12,7 +12,7 @@ img {
 }
 
 .sb-component-button-primary:hover {
-    background-color: #f2ad18 !important;
+    background-color: 41, 89%, 52%
 }
 
 
