--- a/src/css/main.css
+++ b/src/css/main.css
@@ -12,7 +12,7 @@ img {
 }
 
 .sb-component-button-primary:hover {
-    background-color: hs
+    background-color: hsla(41, 89%, 52%, saturation, lightness, alpha)
 }
 
 
