main.css: changed

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -20,7 +20,7 @@ img {
     color: red;
 }
 
-.sb-component-button-secondary a {
+.sb-component-button-secondary label {
     border-color: #e6ebef;
     color: red;
 }
