--- a/src/css/main.css
+++ b/src/css/main.css
@@ -15,6 +15,10 @@ img {
     background-color: hsla(41, 89%, 52%, 1);
 }
 
+.sb-component-button-secondary {
+    background-color: tomato;
+}
+
 body {
     padding: 0 1rem;
 }
