--- a/src/css/main.css
+++ b/src/css/main.css
@@ -19,6 +19,12 @@ img {
     background-color: #263640;
 }
 
+
+
+.sb-component-button-secondary {
+    background-color: #263640;
+}
+
 body {
     padding: 0 1rem;
 }
