main.css: changed

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -21,8 +21,8 @@ img {
 
 
 
-.sb-component-button-secondary {
-    background-color: #263640;
+.sb-component-button-secondary:hover {
+    background-color: transparent;
 }
 
 body {
