main.css: changed

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -44,7 +44,7 @@ time[data-sb-field-path = "date"] {
 }
 
 
-data-sb-field-path=".copyrightText"
+Markdown[data-sb-field-path=".copyrightText"
 
 
 body {
