--- a/src/css/main.css
+++ b/src/css/main.css
@@ -8,7 +8,8 @@
 :root { 
     --text-primary: #f5f5f5;
     --text-secondary: #a5bbca;
-    --bg-primary: 
+    --bg-primary: #1C2830;
+    --bg-secondary: 
 }
 
 
