--- a/src/css/main.css
+++ b/src/css/main.css
@@ -9,7 +9,8 @@
     --text-primary: #f5f5f5;
     --text-secondary: #a5bbca;
     --bg-primary: #1C2830;
-    --bg-secondary: 
+    --bg-secondary: #263640;
+    --accent: 
 }
 
 
