main.css: changed

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -10,7 +10,8 @@
     --text-secondary: #a5bbca;
     --bg-primary: #1C2830;
     --bg-secondary: #263640;
-    --accent: 
+    --accent: #F2AD18;
+    --accent-dark: 
 }
 
 
