main.css: changed

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -11,7 +11,7 @@
     --bg-primary: #1C2830;
     --bg-secondary: #263640;
     --accent: #F4BB44;
-    --accent-dark: 
+    --accent-dark: #F2AD18;
 }
 
 
