--- a/src/css/main.css
+++ b/src/css/main.css
@@ -45,7 +45,7 @@ img {
 }
 
 .sb-component-link:hover {
-    color: #f5f5f5;
+    color: var(--text-primary);
 }
 
 time[data-sb-field-path = "date"] {
