main.css: changed

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -25,7 +25,7 @@ img {
 }
 
 .sb-component-button-secondary {
-    background-color: #263640;
+    background-color: var(--bg-secondary);
 }
 
 .sb-component-button-secondary:hover {
