--- a/src/css/main.css
+++ b/src/css/main.css
@@ -71,6 +71,10 @@ body {
     text-align: left;
 }
 
+.page-blog {
+    color: red;
+}
+
 @layer base {
     body {
         @apply bg-main text-base;
