main.css: changed

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -76,7 +76,7 @@ body {
     color: red;
 }
 
-data-sb-field-path="bottomSections"
+.sb-post-layout > div[data-sb-field-path="bottomSections"
 
 @layer base {
     body {
