--- a/src/css/main.css
+++ b/src/css/main.css
@@ -81,7 +81,7 @@ body {
 }
 
 .sb-post-layout > div[data-sb-field-path="bottomSections"] > article{
-    background-color: var(--bg-primary);
+    background-color: red;
 }
 
 @layer base {
