main.css: changed

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -73,6 +73,7 @@ body {
 
 .sb-post-layout > * {
     background-color: var(--bg-primary);
+    color: var(--text-primary);
 }
 
 .sb-post-layout > div[data-sb-field-path="bottomSections"] > div{
