main.css: changed

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -80,7 +80,7 @@ body {
     background-color: var(--bg-secondary);
 }
 
-.sb-post-layout > div[data-sb-field-path="bottomSections"] > div{
+.sb-post-layout > div[data-sb-field-path="bottomSections"] > div > div > div > div> article{
     background-color: red;
 }
 
