--- a/src/css/main.css
+++ b/src/css/main.css
@@ -77,7 +77,7 @@ body {
 }
 
 .sb-post-layout > div[data-sb-field-path="bottomSections"] > div{
-    background-color: var(--bg-secondary);
+    background-color: var(--bg-primary);
 }
 
 .sb-post-layout > div[data-sb-field-path="bottomSections"] > div > div > div > div> article{
