main.css: changed

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -84,7 +84,7 @@ body {
     background-color: var(--bg-secondary);
 }
 
-.sb-post-layout > div[data-sb-field-path="bottomSections"] > div > div > div > div> article{
+.sb-post-layout > div[data-sb-field-path="bottomSections"] > div > div > div > div> article < a < div < div < div < h3{
     background-color: var(--bg-secondary);
 }
 
