--- a/src/css/main.css
+++ b/src/css/main.css
@@ -85,7 +85,7 @@ body {
 }
 
 .sb-post-layout > div[data-sb-field-path="bottomSections"] > div > div > div > div> article < a < div < div < div < h3{
-    background-color: var(--bg-secondary);
+    color: red;
 }
 
 @layer base {
