--- a/src/css/main.css
+++ b/src/css/main.css
@@ -72,7 +72,7 @@ body {
 }
 
 .sb-post-layout > * {
-    background-color: var(--bg-primary);
+    background-color: var(--bg-secondary);
     color: var(--text-primary);
 }
 
