--- a/src/css/main.css
+++ b/src/css/main.css
@@ -71,7 +71,7 @@ body {
     text-align: left;
 }
 
-.sb-post-layout > * {
+.sb-post-layout > article {
     background-color: var(--bg-secondary);
     color: var(--text-primary);
 }
