main.css: changed

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -73,6 +73,7 @@ body {
 
 .sb-post-layout > article {
     background-color: var(--bg-secondary);
+    border-radius: .5rem;
     color: var(--text-primary);
 }
 
