--- a/src/css/main.css
+++ b/src/css/main.css
@@ -12,7 +12,10 @@
     --bg-secondary: #263640;
     --accent: #F4BB44;
     --accent-dark: #F2AD18;
-    font-size: 16px;
+}
+
+p {
+    font-size: 1.;
 }
 
 
