--- a/src/css/main.css
+++ b/src/css/main.css
@@ -18,6 +18,9 @@ p {
     font-size: 1.125rem;
 }
 
+@media screen only and (min-width: 836px) {
+    
+}
 
 img {
   filter: brightness(.8) saturate(1.25);
