main.css: changed

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -535,4 +535,8 @@ nav > Link {
   }
 }
 
-@media only screen and (min-width: 1023px)
+@media only screen and (min-width: 863px) {
+    * {
+        color: red;
+    }
+}
