--- a/src/css/main.css
+++ b/src/css/main.css
@@ -530,7 +530,7 @@ nav > Link {
 }
 
 @media only screen and (min-width: 863px) {
-    * {
-        color: red;
+    :root {
+        font-size: 
     }
 }
