main.css: changed

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -531,6 +531,6 @@ nav > Link {
 
 @media only screen and (min-width: 863px) {
     :root {
-        font-size: 
+        font-size: 18px;
     }
 }
