--- a/src/css/main.css
+++ b/src/css/main.css
@@ -77,6 +77,7 @@ body {
     background-color: var(--bg-secondary);
     border-radius: .5rem;
     color: var(--text-primary);
+    margin-top: 
 }
 
 .sb-post-layout > div[data-sb-field-path="bottomSections"] > div{
