--- a/src/css/main.css
+++ b/src/css/main.css
@@ -77,7 +77,7 @@ body {
     background-color: var(--bg-secondary);
     border-radius: .5rem;
     color: var(--text-primary);
-    margin: 48px 
+    margin: 48px 16px 32px 16px;
 }
 
 .sb-post-layout > div[data-sb-field-path="bottomSections"] > div{
