--- a/src/css/main.css
+++ b/src/css/main.css
@@ -78,6 +78,7 @@ body {
     border-radius: .5rem;
     color: var(--text-primary);
     margin: 48px 16px 32px 16px;
+    padding: 0;
 }
 
 .sb-post-layout > div[data-sb-field-path="bottomSections"] > div{
