--- a/src/css/main.css
+++ b/src/css/main.css
@@ -22,6 +22,10 @@ img {
   filter: brightness(.8) saturate(1.25);
 }
 
+.header {
+    padding-bottom: 5rem;
+}
+
 .sb-component-button-primary:hover {
     background-color: var(--accent-dark);
 }
