--- a/src/css/main.css
+++ b/src/css/main.css
@@ -81,7 +81,10 @@ body {
     background-color: var(--bg-secondary);
     border-radius: .5rem;
     color: var(--text-primary);
-    margin: 48px 16px 32px 16px;
+    /* margin: 48px 16px 32px 16px; */
+    margin: 0 auto;
+    margin-top: 48px;
+    margin-bottom: 32px;
     max-width: 1440px;
     padding: 36px;
 }
