main.css: changed

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -547,4 +547,15 @@ nav > Link {
     :root {
         font-size: 18px;
     }
+  h1 {
+    font-size: 1.802rem;
+  }
+
+  h2 {
+    font-size: 1.602rem;
+  }
+
+  h3 {
+    font-size: 1.424rem;
+  }
 }
