main.css: changed

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -544,7 +544,17 @@ nav > Link {
 }
 
 @media only screen and (max-width: 862px) {
-    
+    h1 {
+        font-size: 1.802rem;
+    }
+
+    h2 {
+        font-size: 1.602rem;
+    }
+
+    h3 {
+        font-size: 1.424rem;
+    }
 }
 
 @media only screen and (min-width: 863px) {
