--- a/src/css/main.css
+++ b/src/css/main.css
@@ -543,7 +543,7 @@ nav > Link {
   }
 }
 
-@media only screen and (max-width: 862px) {
+@media only screen and (min-width: 862px) {
     h1 {
         font-size: 1.802rem;
     }
