main.css: changed

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -557,7 +557,7 @@ nav > Link {
     }
 }
 
-@media only screen and (min-width: 863px) {
+/* @media only screen and (min-width: 863px) {
     :root {
         font-size: 18px;
     }
@@ -573,4 +573,4 @@ nav > Link {
     h3 {
         font-size: 1.424rem;
     }
-}
+} */
