--- a/src/css/main.css
+++ b/src/css/main.css
@@ -541,7 +541,7 @@ nav > Link {
 
 @media only screen and (max-width: 862px) {
     h1 {
-        font-size: 1.802rem;
+        font-size: 1.802rem !important;
     }
 
     h2 {
