--- a/src/css/main.css
+++ b/src/css/main.css
@@ -101,6 +101,10 @@ body {
     color: var(--text-primary);
 }
 
+.sb-component-post-feed-section {
+    margin: 
+}
+
 @layer base {
     body {
         @apply bg-main text-base;
