main.css: changed

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -105,6 +105,10 @@ body {
     color: var(--text-primary);
 }
 
+.sb-component-cta-section {
+    background: red;
+}
+
 @layer base {
     body {
         @apply bg-main text-base;
