--- a/src/css/main.css
+++ b/src/css/main.css
@@ -105,7 +105,7 @@ body {
     color: var(--text-primary);
 }
 
-.sb-component-cta-section {
+.sb-component-cta-section > div{
     background: red;
 }
 
