--- a/src/css/main.css
+++ b/src/css/main.css
@@ -8,7 +8,7 @@
 :root { 
     --text-primary: #f5f5f5;
     --text-secondary: #a5bbca;
-    --bg-primary: #1C2830;
+    --bg-primary: #1c3030;
     --bg-secondary: #263640;
     --accent: #F4BB44;
     --accent-dark: #F2AD18;
