main.css: changed

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -9,7 +9,7 @@
     --text-primary: #f5f5f5;
     --text-secondary: #a5bbca;
     --bg-primary: #1c3030;
-    --bg-secondary: #263640;
+    --bg-secondary: #26403f;
     --accent: #F4BB44;
     --accent-dark: #F2AD18;
 }
