main.css: changed

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -7,7 +7,7 @@
 
 :root { 
     --text-primary: #f0fafa;
-    --text-secondary: #a5bbca;
+    --text-secondary: #a5cac9;
     --bg-primary: #1c3030;
     --bg-secondary: #26403f;
     --accent: #F4BB44;
