--- a/src/css/main.css
+++ b/src/css/main.css
@@ -115,7 +115,7 @@ body {
     color: var(--text-primary);
 } */
 
-#footer .footer-container #newsletter #revue-embed form div input {
+#revue-embed form div input {
   border-radius: 0.5rem;
   border: none;
   margin-top: 0.75rem;
