main.css: changed

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -127,7 +127,7 @@ body {
   width: 100%;
 }
 
-#footer .footer-container #newsletter #revue-embed form div #member_submit {
+#revue-embed form div #member_submit {
   background-color: var(--text-secondary);
   border-radius: 5em;
   color: var(--bg-primary);
