--- a/src/css/main.css
+++ b/src/css/main.css
@@ -138,7 +138,7 @@ body {
   padding: 0.75em 1.5em;
 }
 
-#footer .footer-container #newsletter #revue-embed form div #member_submit:hover {
+#revue-embed form div #member_submit:hover {
   background-color: var(--text-primary);
 }
 
