--- a/src/css/main.css
+++ b/src/css/main.css
@@ -123,7 +123,7 @@ body {
   padding: 2rem;
   font-size: inherit;
   color: var(--text-primary);
-  background-color: var(--bg-secondary);
+  background-color: var(--text-secondary);
   width: 100%;
 }
 
