main.css: changed

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -151,6 +151,10 @@ body {
   margin-bottom: 1.5rem;
 }
 
+.light-font {
+    color: red;
+}
+
 @layer base {
     body {
         @apply bg-main text-base;
