--- a/src/css/main.css
+++ b/src/css/main.css
@@ -126,7 +126,7 @@ body {
   margin-bottom: 1.5rem;
   padding: 2rem;
   font-size: inherit;
-  color: var(--text-primary);
+  color: var(--bg-primary);
   background-color: var(--text-secondary);
   width: 100%;
 }
