main.css: changed

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -150,6 +150,10 @@ body {
   line-height: 1;
 }
 
+#revue-embed .revue-form-footer > p > a {
+  line-height: 1;
+}
+
 .light-font {
     color: var(--text-secondary);
 }
