--- a/src/css/main.css
+++ b/src/css/main.css
@@ -150,8 +150,8 @@ body {
   line-height: 1;
 }
 
-#revue-embed > a {
-    color: red;
+#revue-embed .revue-form-footer > p > {
+  line-height: 1;
 }
 
 .light-font {
