--- a/src/css/main.css
+++ b/src/css/main.css
@@ -150,7 +150,7 @@ body {
   line-height: 1;
 }
 
-#revue-embed .revue-form-footer > p > {
+#revue-embed .revue-form-footer > p {
   line-height: 1;
 }
 
