--- a/src/css/main.css
+++ b/src/css/main.css
@@ -154,7 +154,7 @@ body {
   line-height: 1;
 }
 
-#revue-embed .revue-form-footer > p > small {
+#revue-embed .revue-form-footer > p > small > a{
   line-height: 1;
 }
 
