--- a/src/css/main.css
+++ b/src/css/main.css
@@ -154,8 +154,8 @@ body {
   line-height: 1;
 }
 
-#revue-embed .revue-form-footer > p > small > a{
-  line-height: 1;
+#revue-embed .revue-form-footer > p > small > a {
+    color: red;
 }
 
 .light-font {
