main.css: changed

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -88,7 +88,8 @@ body {
 }
 
 #newsletter-cta > div {
-    /* margin-top: 10rem; */
+    margin-top: 10rem;
+    color: red;
 }
 
 .sb-post-layout > article {
