--- a/src/css/main.css
+++ b/src/css/main.css
@@ -651,4 +651,7 @@ nav > Link {
     #revue-embed form div input {
         width: 50%;
     }
+    #revue-embed form div #member_submit {
+        width: 50%;
+    }
 }
