main.css: changed

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -137,7 +137,9 @@ img {
     margin: 0 auto;
 }
 
-
+* {
+    overflow-wrap: auto;
+}
 
 #main article > div > div {
     overflow-wrap: break-word;
