--- a/src/css/main.css
+++ b/src/css/main.css
@@ -137,7 +137,7 @@ img {
     margin: 0 auto;
 }
 
-div[data-sb-field-path="postFeed"] > div > div > div:last { 
+div[data-sb-field-path="postFeed"] > div > div > div:last-child { 
     transform: scale(.70);
 }
 
