--- a/src/css/main.css
+++ b/src/css/main.css
@@ -610,7 +610,7 @@ nav > Link {
     }
 }
 
-div[data-sb-field-path="markdown_content"] >  {
+div[data-sb-field-path="markdown_content"] > * {
     width: 10%;
 }
 
